--- a/index.html
+++ b/index.html
@@ -3,13 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website</title>
+    <title>Trevor's Resume</title>
 </head>
+<h1>Trevor M. Stauffer</h1>
+<img src="me.jpg" width="300" height="400">
 <body>
-    <p>Here is some text</p>
-    <a href="download.jpg" download="photograph">
-        <img src="download.jpg">
+    <p>Hi, my name is Trevor. I'm a recent college grad. I graduated from The Pennsylvania State University with a B.S. in Physics. I've been learning alot about programming. Specifically how to program in
+        python and how to analyze data. I've learned how to use pandas, matplotlib and numpy. Soon I will learn how to use sklearn and other machine learning tools. I've been currently working on an Android Project that
+        currently is occupying my mind. It's an app that schedules alarms based on the position of the sun in the sky. It's not 100% complete yet, but it's working. It just needs a few things to make it really beautiful,
+         like an icon and the ability to get your location in the background. Those features are just around the corner. You can test it out by clicking on the link below. I should warn you though. It was made for Android 10
+         and the Pixel 3a. It might not work on your phone, but then again it might. I have to optimize the code for all APIs and screen sizes. 
+    </p>
+    <a href="app_release.apk" download="Akashic">
+        <img src="android.png">
     </a>
-    
+    <p>I have some other interesting coding projects. These project's are more complete. This set I like to call Euler's Projects because they're programs written to solve complex math problems given on the website Euler's Project.
+         If you're not familiar with the site, I suggest you check it out. It's a really fun site if you're into taking the time to really think about a problem and come up with a solution. I think I need to come back to this site once again
+         it was alot of fun. My solutions and the relevant problems are listed below. The solution I'm most proud of is problem 70. I came up the most elegant solution and then had to optimize it twice to come up with a solution that solved
+         in a reasonable amount of time. Then I programmed it in C++ and got it down to 30 seconds or less. Then with the help of the Euler's Forums it came down even further to 2 seconds. 
+    </p>
+    <h2><a href="projecteuler.net">Euler's Projects</a></h2>
+    <p>My Euler username is tmstauff.</p>
+    <h3><a href="https://projecteuler.net/problem=70">Problem 70</a></h3>
+    <a href="Euler70.py" download="Euler70">
+        Euler70
+    </a>
+    <p>This was my brute force attempt, this will take over a millenia to solve!</p>
+    <a href="Euler70SecondAttempt.py" download="Euler70SecondAttempt">
+        Euler70
+    </a>
+    <p>Here I started to implement my elegant solution. This will take approximately 17 hours, atleast it's in ny lifetime!</p>
+    <a href="Euler70ThirdAttempt.py" download="Euler70ThirdAttempt">
+        Euler70ThirdAttempt
+    </a>
+    <p>Here I persisted and adapted the concept used in Eratosthene's Sieve (the way I was using to find the primes), for another part of the program (I can't remember which right now. I'll have to look at it again). This solves in about 7 minutes, whew I can breathe.  </p>
+    <p>I'll upload my C++ versions sooner or later. For now enjoy these. I'll upload other Euler problems later but they aren't as interesting as this one anyways.</p>
+
 </body>
 </html>
