--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          like an icon and the ability to get your location in the background. Those features are just around the corner. You can test it out by clicking on the link below. I should warn you though. It was made for Android 10
          and the Pixel 3a. It might not work on your phone, but then again it might. I have to optimize the code for all APIs and screen sizes. 
     </p>
-    <a href="app_release.apk" download="Akashic">
+    <a href="app_release.apk" download="Akashic.apk">
         <img src="android.png">
     </a>
     <p>I have some other interesting coding projects. These project's are more complete. This set I like to call Euler's Projects because they're programs written to solve complex math problems given on the website Euler's Project.
@@ -25,15 +25,14 @@
     <h2><a href="projecteuler.net">Euler's Projects</a></h2>
     <p>My Euler username is tmstauff.</p>
     <h3><a href="https://projecteuler.net/problem=70">Problem 70</a></h3>
-    <a href="Euler70.py" download="Euler70">
+    <a href="Euler70.py" download="Euler70.py">
         Euler70
     </a>
     <p>This was my brute force attempt, this will take over a millenia to solve!</p>
-    <a href="Euler70SecondAttempt.py" download="Euler70SecondAttempt">
-        Euler70
-    </a>
+    <a href="Euler70SecondAttempt.py" download="Euler70SecondAttempt.py">
+        Euler70SecondAttempt
     <p>Here I started to implement my elegant solution. This will take approximately 17 hours, atleast it's in ny lifetime!</p>
-    <a href="Euler70ThirdAttempt.py" download="Euler70ThirdAttempt">
+    <a href="Euler70ThirdAttempt.py" download="Euler70ThirdAttempt.py">
         Euler70ThirdAttempt
     </a>
     <p>Here I persisted and adapted the concept used in Eratosthene's Sieve (the way I was using to find the primes), for another part of the program (I can't remember which right now. I'll have to look at it again). This solves in about 7 minutes, whew I can breathe.  </p>
