Reinstate closing hyperlink bracket
Reinstated closed hyperlink bracket for secondeuler attempt that I seemed to have deleted

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <p>This was my brute force attempt, this will take over a millenia to solve!</p>
     <a href="Euler70SecondAttempt.py" download="Euler70SecondAttempt.py">
         Euler70SecondAttempt
-    <p>Here I started to implement my elegant solution. This will take approximately 17 hours, atleast it's in ny lifetime!</p>
+    </a>
+    <p>Here I started to implement my elegant solution. This will take approximately 17 hours, atleast it's in my lifetime!</p>
     <a href="Euler70ThirdAttempt.py" download="Euler70ThirdAttempt.py">
         Euler70ThirdAttempt
     </a>
