Added The app For Matt
Added the App for matt

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <p>Hi, my name is Trevor. I'm a recent college grad. I graduated from The Pennsylvania State University with a B.S. in Physics. I've been learning alot about programming. Specifically how to program in
         python and how to analyze data. I've learned how to use pandas, matplotlib and numpy. Soon I will learn how to use sklearn and other machine learning tools. I've been currently working on an Android Project that
-        currently is occupying my mind. It's an app that schedules alarms based on the position of the sun in the sky. It's not 100% complete yet, but it's working. It just needs a few things to make it really beautiful,
+        currently is occupying my mind. It's an app that schedules alarms based on the position of the sun in the sky. It's not 100% complete yet, but its main funcionality is working. It just needs a few things to make it really beautiful,
          like an icon and the ability to get your location in the background. Those features are just around the corner. You can test it out by clicking on the link below. Make sure you enable unknown sources! I should warn you though. It was made for Android 10
          and the Pixel 3a. It might not work on your phone, but then again it might. I have to optimize the code for all APIs and screen sizes. 
     </p>
@@ -25,7 +25,10 @@
                 </a>
             </td>
             <td>
-                SHOULD work down to API 26 or Android OREO. Only ever tested on a Pixel 3a with Android 10 and 11. May look funny with different screen sizes. Not production ready, just for you to see what I can do.
+                SHOULD work down to API 19 or Android OREO. Only ever tested on a Pixel 3a with Android 10 and 11. May look funny with different screen sizes. Not production ready, just for you to see what I can do.
+            </td>
+            <td>
+                <a id="matt" href="app-release.apk" download="Akashic.apk">Hey Matt! Click Over here! On your phone.</a>
             </td>
         </tr></table>
         
