Updated app-release.apk to a more user-friendly and complete version, including Background Locations
Updated app-release.apk to a more user-friendly and complete version, including Background Locations.

Geofencing may or may not work in this release.

--- a/index.html
+++ b/index.html
@@ -20,16 +20,14 @@
     <div class="table">
         <table><tr>
             <td>
-                <a href="Akashic.apk" download="Akashic.apk">
+                <a href="app-release.apk" download="Akashic.apk">
                     <img src="android.png">
                 </a>
             </td>
             <td>
                 SHOULD work down to API 19 or Android OREO. Only ever tested on a Pixel 3a with Android 10 and 11. May look funny with different screen sizes. Not production ready, just for you to see what I can do.
             </td>
-            <td>
-                <a id="matt" href="app-release.apk" download="Akashic.apk">Hey Matt! Click Over here! On your phone.</a>
-            </td>
+            
         </tr></table>
         
     </div>
